--- a/core/templates/ogm_chart.html
+++ b/core/templates/ogm_chart.html
@@ -337,8 +337,8 @@
                 </div>
                 <div class="container" id="detail-1">
                     <div class="row">
-                        <div class="col-md-offset-2 col-md-8 table-responsive">
-                            <table class="table table-bordered  table-condensed table-striped pma-bg-white">
+                        <div class="col-lg-5 col-md-5 col-sm-12 table-responsive">
+                            <table class="table table-bordered table-condensed table-striped pma-bg-white">
                                 <thead class="thead-inverse">
                                 <tr class="bg-primary">
                                     <th class="text-center"><strong>Posici&oacute;n</strong></th>
@@ -401,6 +401,10 @@
                             </tr>
                             {% endcomment %}
                             </table>
+                        </div>
+                        <div class="col-lg-7 col-md-7 col-sm-12 height-horizontal-bar">
+                            <div id="bar_horizontal" class="view-alternative"> Barra Horizontal
+                            </div>
                         </div>
                     </div>
                 </div>
