--- a/core/templates/_base.html
+++ b/core/templates/_base.html
@@ -39,7 +39,7 @@
 </head>
 <body>
 <!-- Header -->
-<header class="pma-gradient">
+<header class="pma-gradient {% if request.resolver_match.url_name != 'home' %}sticky-header{% endif %}">
     <nav class="navbar" role="navigation">
         <!-- El logotipo y el icono que despliega el menú se agrupan
        para mostrarlos mejor en los dispositivos móviles -->
