--- a/core/templates/expenses.html
+++ b/core/templates/expenses.html
@@ -3,7 +3,7 @@
 {% load mathfilters %}
 {% load core_extras %}
 {% block indicator_subtitle %}
-    Gasto de Personal
+    {{ indicator_name }}
 {% endblock %}
 
 {% block indicator_description %}
@@ -12,7 +12,7 @@
 
 {% block main_table %}
 <div class="col-md-5">
-    <h4>Rubros de gastos de personal para el per&iacute;odo {{ year }}
+	<h4>Rubros de {{ indicator_name }} para el per&iacute;odo {{ year }}
     {% if periodo_list|keyvalue:year == 'F' %}
         cierre
     {% elif periodo_list|keyvalue:year == 'A' %}
@@ -23,11 +23,11 @@
     </h4>
     <h5>
     {% if periodo_list|keyvalue:year == 'F' %}
-        Ejecuci&oacute;n de gastos de personal
+        Ejecuci&oacute;n de {{ indicator_name }}
     {% elif periodo_list|keyvalue:year == 'A' %}
-        Ejecuci&oacute;n intermedia de gastos de personal
+        Ejecuci&oacute;n intermedia de {{ indicator_name }}
     {% elif periodo_list|keyvalue:year == 'I' %}
-        Presupuesto inicial de gastos de personal
+        Presupuesto inicial de gastos de {{ indicator_name }}
     {% endif %}
     {{ year }}
     por su destino {% descargar_excel "gp1" %}</h5>
@@ -35,7 +35,7 @@
     <table class="table table-striped table-hover" id="datatable-1">
         <thead>
         <tr class="bg-primary">
-            <th class="text-left">Rubros de Gasto de Personal</th>
+    	    <th class="text-left">Rubros de {{ indicator_name }}</th>
 	    {% if periodo_list|keyvalue:year == 'I' %}
               <th class="text-right">Inicial</th>
 	    {% else %}
@@ -78,7 +78,7 @@
                 <div class="row">
                     <div class="col-lg-12 col-md-12">
                         {% if municipio %}
-			<h2><strong>Rankin de gastos de personal percápita {{ year }} </strong>
+			<h2><strong>Rankin de {{ indicator_name }} percápita {{ year }} </strong>
 				Municipio de {{ municipio }} grupo "{{ mi_clase.clasificacion }}" </h2>
                         {% endif %}
                         <hr class="pma-line-3"/>
@@ -171,7 +171,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 col-md-12">
-			    <h2><strong>Porcentaje destinado a gastos de personal, presupuesto
+			    <h2><strong>Porcentaje destinado a {{ indicator_name }}, presupuesto
                             {% if periodo_list|keyvalue:year == 'F' %}
                                 de cierre
                             {% elif periodo_list|keyvalue:year == 'A' %}
@@ -248,7 +248,7 @@
         <div class="row">
             <div class="col-md-12">
                 <h2><strong>Información Histórica</strong><br>
-                    Ejecución presupuestaria del gasto de personal</h2>
+                    Ejecución presupuestaria del {{ indicator_name }}</h2>
 		<h3>{{ municipio }}</h3>
                 <hr class="pma-line-3"/>
             </div>
