--- a/core/templates/variance_analysis.html
+++ b/core/templates/variance_analysis.html
@@ -132,7 +132,7 @@
     <div class="cd-horizontal-timeline loaded">
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-lg-12 col-md-12 col-sm-12">
                     {% if not municipio %}
                         <h2><strong>Ranking </strong> <br>
                             por categoría de Municipios</h2>
@@ -143,6 +143,9 @@
                     {% endif %}
                     <hr class="pma-line-3"/>
                 </div>
+                {% if municipio %}
+                    {% include 'municipal-triangle.html' %}
+                {% endif %}
             </div>
         </div>
         <div class="events-content container text-center">
