--- a/core/templates/variance_analysis.html
+++ b/core/templates/variance_analysis.html
@@ -129,7 +129,7 @@
 {% endblock %}
 
 {% block section2 %}
-    <div class="cd-horizontal-timeline loaded">
+    <div class="loaded">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12">
@@ -145,83 +145,9 @@
                 </div>
                 {% if municipio %}
                     {% include 'municipal-triangle.html' %}
-                {% endif %}
-            </div>
-        </div>
-        <div class="events-content container text-center">
-            <ol>
-                {% for row in otros|dictsortreversed:"asignado" %}
-                    <li{% if municipio.slug == row.ingreso__municipio__slug %} class="selected"{% endif %}
-                                                                               data-date="{% now "SHORT_DATETIME_FORMAT" %} 00:{{ forloop.counter }}">
-                    </li>
-                {% endfor %}
-                {% for row in porclasep|dictsortreversed:"asignado" %}
-                    <li{% if municipio.slug == row.ingreso__municipio__slug %} class="selected"{% endif %}
-                                                                               data-date="{% now "SHORT_DATETIME_FORMAT" %} 00:{{ forloop.counter }}">
-                    </li>
-                {% endfor %}
-            </ol>
-        </div> <!-- .events-content -->
-
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 text-center medium">
-                    <button id="show-detail-1" class="blanco btn pma-bg-blue more" type="submit">
-                        Ver detalles en tabla
-                    </button>
-                </div>
-            </div>
-        </div>
-        <div id="detail-1" class="container">
-            <div class="row">
-                <div class="col-xs-12 col-sm-12 col-md-12 table-responsive">
-                    <h2>{{ indicator_name }}</h2>
-                    {% if municipio %}
-                        <h3>por Municipios de Categoría "{{ mi_clase.clasificacion }}"</h3>
-                        <table class="table table-condensed table-striped pma-bg-white">
-                            <thead class="thead-inverse">
-                            <tr class="bg-primary">
-                                <th class="text-left">Municipios</th>
-                                <th class="text-right">
-                                    {% if ep %}
-                                        Ingreso
-                                    {% else %}
-                                        P. Inicial
-                                    {% endif %}
-                                </th>
-                                <th class="text-right">
-                                    {% if ep %}
-                                        Gasto
-                                    {% else %}
-                                        Ejecución
-                                    {% endif %}
-                                </th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            {% for row in otros %}
-                                <tr>
-                                    <td class="text-left">{{ row.nombre }}</td>
-                                    <td class="text-right">
-                                        {% if row.asignado %}
-                                            {{ row.asignado|floatformat:2 }}
-                                        {% elif row.ingreso %}
-                                            {{ row.ingreso|floatformat:2|intcomma }}
-                                        {% else %} 0 {% endif %}%
-                                    </td>
-                                    <td class="text-right">
-                                        {% if row.ejecutado %}
-                                            {{ row.ejecutado|floatformat:2 }}
-                                        {% elif row.gasto %}
-                                            {{ row.gasto|floatformat:2|intcomma }}
-                                        {% else %} 0 {% endif %}%
-                                    </td>
-                                </tr>
-                            {% endfor %}
-                            </tbody>
-                        </table>
-                    {% else %}
-                        <h3>por categoría de Municipios</h3>
+                {% else %}
+                    <div class="col-xs-5 col-sm-5 col-md-5 table-responsive">
+                        <h3>{{ indicator_name }} <br> por categoría de Municipios</h3>
                         <table class="table table-condensed table-striped pma-bg-white">
                             <thead class="thead-inverse">
                             <tr class="bg-primary">
@@ -264,11 +190,94 @@
                             {% endfor %}
                             </tbody>
                         </table>
-                    {% endif %}
+                    </div>
+                    <div class="col-lg-7 col-md-7 col-sm-12">
+                        <div id="bar_horizontal" class="view-alternative"> Barra Horizontal
+                        </div>
+                    </div>
+                {% endif %}
+            </div>
+        </div>
+        <div class="events-content container text-center">
+            <ol>
+                {% for row in otros|dictsortreversed:"asignado" %}
+                    <li{% if municipio.slug == row.ingreso__municipio__slug %} class="selected"{% endif %}
+                                                                               data-date="{% now "SHORT_DATETIME_FORMAT" %} 00:{{ forloop.counter }}">
+                    </li>
+                {% endfor %}
+                {% for row in porclasep|dictsortreversed:"asignado" %}
+                    <li{% if municipio.slug == row.ingreso__municipio__slug %} class="selected"{% endif %}
+                                                                               data-date="{% now "SHORT_DATETIME_FORMAT" %} 00:{{ forloop.counter }}">
+                    </li>
+                {% endfor %}
+            </ol>
+        </div> <!-- .events-content -->
+
+        {% if municipio %}
+
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 text-center medium">
+                        <button id="show-detail-1" class="blanco btn pma-bg-blue more" type="submit">
+                            Ver detalles en tabla
+                        </button>
+                    </div>
                 </div>
             </div>
-
-        </div>
+            <div id="detail-1" class="container">
+                <div class="row">
+                    <div class="col-xs-5 col-sm-5 col-md-5 table-responsive">
+                        <h3>{{ indicator_name }} <br> por Municipios de Categoría "{{ mi_clase.clasificacion }}"</h3>
+                        <table class="table table-condensed table-striped pma-bg-white">
+                            <thead class="thead-inverse">
+                            <tr class="bg-primary">
+                                <th class="text-left">Municipios</th>
+                                <th class="text-right">
+                                    {% if ep %}
+                                        Ingreso
+                                    {% else %}
+                                        P. Inicial
+                                    {% endif %}
+                                </th>
+                                <th class="text-right">
+                                    {% if ep %}
+                                        Gasto
+                                    {% else %}
+                                        Ejecución
+                                    {% endif %}
+                                </th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            {% for row in otros %}
+                                <tr>
+                                    <td class="text-left">{{ row.nombre }}</td>
+                                    <td class="text-right">
+                                        {% if row.asignado %}
+                                            {{ row.asignado|floatformat:2 }}
+                                        {% elif row.ingreso %}
+                                            {{ row.ingreso|floatformat:2|intcomma }}
+                                        {% else %} 0 {% endif %}%
+                                    </td>
+                                    <td class="text-right">
+                                        {% if row.ejecutado %}
+                                            {{ row.ejecutado|floatformat:2 }}
+                                        {% elif row.gasto %}
+                                            {{ row.gasto|floatformat:2|intcomma }}
+                                        {% else %} 0 {% endif %}%
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="col-lg-7 col-md-7 col-sm-12 height-horizontal-bar">
+                        <div id="bar_horizontal" class="view-alternative"> Barra Horizontal
+                        </div>
+                    </div>
+                </div>
+            </div>
+        {% endif %}
     </div>
 {% endblock %}
 
@@ -739,5 +748,5 @@
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/modules/data.js"></script>
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
-    {{ charts|load_charts:"pie,bar,pie2,bar2" }}
+    {{ charts|load_charts:"pie,bar,pie2,bar2,bar_horizontal" }}
 {% endblock %}
