--- a/core/templates/variance_analysis.html
+++ b/core/templates/variance_analysis.html
@@ -10,7 +10,18 @@
 {% block section1 %}
 <div class="container">
     <div class="row">
-        <h2> <strong>Detalle de {{indicator_name}}</strong> <br/> del período</h2>
+        <h2> <strong>{{indicator_subtitle}}
+             {% if periodo_list|keyvalue:year == 'F' %}
+                 ejecutados
+             {% elif periodo_list|keyvalue:year == 'A' %}
+                 ejecutado intermedio
+             {% elif periodo_list|keyvalue:year == 'I' %}
+                 presupuesto inicial
+             {% endif %}
+             </strong>
+	     {{ year }}
+	</h2>
+	<h4>Millones de córdobas corrientes</h4>
         <hr class="pma-line-2">
         <div class="col-xs-12 col-sm-12 col-md-7">
             <div class="chart-update colxs-12 col-sm-12 col-md-1">
@@ -32,50 +43,118 @@
         <div class="col-xs-12 col-sm-12 col-md-5 table-responsive">
             <table class="table table-striped table-hover" id="datatable-1">
                 <thead>
+		    <tr>
+                        <td colspan="4" rowspan="1" class="text-justify">
+                            <h4>Rubros de ingresos corrientes para el per&iacute;odo {{ year }}
+                            {% if periodo_list|keyvalue:year == 'F' %}
+                                cierre
+                            {% elif periodo_list|keyvalue:year == 'A' %}
+                                intermedio
+                            {% elif periodo_list|keyvalue:year == 'I' %}
+                                inicial
+                            {% endif %}
+                            </h4>
+                            <h5>
+                            {% if periodo_list|keyvalue:year == 'F' %}
+                                Ejecuci&oacute;n de ingresos corrientes
+                            {% elif periodo_list|keyvalue:year == 'A' %}
+                                Ejecuci&oacute;n intermedia de ingresos corrientes
+                            {% elif periodo_list|keyvalue:year == 'I' %}
+                                Presupuesto inicial de ingresos corrientes
+                            {% endif %}
+                            {{ year }}
+                            por su origen {% descargar_excel "oim1" %}</h5>
+                        </td>
+                    </tr>
                     <tr class="bg-primary">
                         <th class="text-left">Rubro de Ingreso</th>
-                        <th class="text-right">Inicial</th>
-                        <th class="text-right">Ejecutado</th>
-                        <th class="text-right">Porcentaje</th>
+		        {% if periodo_list|keyvalue:year == 'I' %}
+                            <th class="text-right">Inicial</th>
+			{% else %}
+                            <th class="text-right">Ejecutado</th>
+			{% endif %}
+                        <th class="text-right">%</th>
                     </tr>
                 </thead>
                 <tbody>
                 {% for row in rubros %}
                 <tr>
                     <td>{% firstof row.tipoingreso__nombre row.tipoingreso__clasificacion %}</td>
-                    <td class="text-right">{{ row.inicial_asignado|million|intcomma }}</td>
-                    <td class="text-right">{{ row.ejecutado|million|intcomma }}</td>
-                    {% if row.inicial_asignado %}
-                        <td class="text-right">{{ row.ejecutado|div:row.inicial_asignado|mul:100|floatformat:1 }}%</td>
-                    {% endif %}
+		    {% if periodo_list|keyvalue:year == 'I' %}
+                        <td class="text-right">{{ row.inicial_asignado|million|intcomma }}</td>
+                        {% if row.inicial_asignado %}
+                            <td class="text-right">{{ row.asignado|div:asignado|mul:100|floatformat:1 }}%</td>
+                        {% endif %}
+		    {% else %}
+                        <td class="text-right">{{ row.ejecutado|million|intcomma }}</td>
+                        {% if ejecutado %}
+                            <td class="text-right">{{ row.ejecutado|div:ejecutado|mul:100|floatformat:1 }}%</td>
+                        {% endif %}
+		    {% endif %}
                 </tr>
                 {% endfor %}
                 </tbody>
                 <tr class="bold">
                     <td>TOTAL</td>
-                    <td class="text-right">{{ rubros|total_sum:'inicial_asignado'|million|intcomma }}</td>
-                    <td class="text-right">{{ rubros|total_sum:'ejecutado'|million|intcomma }}</td>
-                    {% with sum_asignado=rubros|total_sum:'inicial_asignado' %}
-                        <td class="text-right">
-                            {% if sum_asignado %}
-                                {{ rubros|total_sum:'ejecutado'|div:sum_asignado|mul:100|floatformat:2|intcomma}}%
-                            {% endif %}
-                        </td>
-                    {% endwith %}
+		    {% if periodo_list|keyvalue:year == 'I' %}
+                      <td class="text-right">{{ rubros|total_sum:'inicial_asignado'|million|intcomma }}</td>
+		    {% else %}
+                        <td class="text-right">{{ rubros|total_sum:'ejecutado'|million|intcomma }}</td>
+		    {% endif %}
                 </tr>
             </table>
         </div>
     </div>
     <div class="row">
-        <hr class="pma-line-2">
+        <div class="col-xs-12 col-sm-12 col-md-12 pma-spacing-top">
+            <h2> <strong>{{indicator_subtitle2}}
+            {% if periodo_list|keyvalue:year == 'F' %}
+                 ejecutados
+            {% elif periodo_list|keyvalue:year == 'A' %}
+                 ejecutado intermedio
+            {% elif periodo_list|keyvalue:year == 'I' %}
+                 presupuesto inicial
+            {% endif %}
+            </strong>
+	    {{ year }}
+	    </h2>
+	    <h4>Millones de córdobas corrientes</h4>
+            <hr class="pma-line-2">
+        </div>
         <div class="col-xs-12 col-sm-12 col-md-5 table-responsive">
             <table class="table table-striped table-hover" id="datatable-1">
                 <thead>
+		    <tr>
+                        <td colspan="4" rowspan="1" class="text-justify">
+                            <h4>Rubros de gastos corrientes para el per&iacute;odo {{ year }}
+                            {% if periodo_list|keyvalue:year == 'F' %}
+                                cierre
+                            {% elif periodo_list|keyvalue:year == 'A' %}
+                                intermedio
+                            {% elif periodo_list|keyvalue:year == 'I' %}
+                                inicial
+                            {% endif %}
+                            </h4>
+                            <h5>
+                            {% if periodo_list|keyvalue:year == 'F' %}
+                                Ejecuci&oacute;n de gastos corrientes
+                            {% elif periodo_list|keyvalue:year == 'A' %}
+                                Ejecuci&oacute;n intermedia de gastos corrientes
+                            {% elif periodo_list|keyvalue:year == 'I' %}
+                                Presupuesto inicial de gastos corrientes
+                            {% endif %}
+                            {{ year }}
+                            por su destino {% descargar_excel "oim1" %}</h5>
+                        </td>
+                    </tr>
                     <tr class="bg-primary">
                         <th class="text-left">Rubro de Gasto</th>
-                        <th class="text-right">Inicial</th>
-                        <th class="text-right">Ejecutado</th>
-                        <th class="text-right">Porcentaje</th>
+                        {% if periodo_list|keyvalue:year == 'I' %}
+                            <th class="text-right">Inicial</th>
+			{% else %}
+                            <th class="text-right">Ejecutado</th>
+			{% endif %}
+                        <th class="text-right">%</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -83,25 +162,27 @@
                 <tr>
                     <td>
                     {% firstof row.tipogasto__nombre row.tipogasto__clasificacion|default:'Otros' %}</td>
-                    <td class="text-right">{{ row.inicial_asignado|million|intcomma }}</td>
-                    <td class="text-right">{{ row.ejecutado|million|intcomma }}</td>
-                    {% if row.inicial_asignado %}
-                        <td class="text-right">{{ row.ejecutado|div:row.inicial_asignado|mul:100|floatformat:1 }}%</td>
-                    {% endif %}
+                    {% if periodo_list|keyvalue:year == 'I' %}
+                        <td class="text-right">{{ row.inicial_asignado|million|intcomma }}</td>
+                        {% if asignado %}
+                            <td class="text-right">{{ row.inicial_asignado|div:asignado|mul:100|floatformat:3 }}%</td>
+                        {% endif %}
+		    {% else %}
+                        <td class="text-right">{{ row.ejecutado|million|intcomma }}</td>
+                        {% if ejecutado %}
+                            <td class="text-right">{{ row.ejecutado|div:ejecutado|mul:100|floatformat:3 }}%</td>
+                        {% endif %}
+		    {% endif %}
                 </tr>
                 {% endfor %}
                 </tbody>
                 <tr class="">
-                    <td class="text-right">TOTAL</td>
-                    <td class="text-right">{{ rubrosg|total_sum:'inicial_asignado'|million|intcomma }}</td>
-                    <td class="text-right">{{ rubrosg|total_sum:'ejecutado'|million|intcomma }}</td>
-                    {% with sum_asignado=rubrosg|total_sum:'inicial_asignado' %}
-                        <td class="text-right">
-                            {% if sum_asignado %}
-                                {{ rubrosg|total_sum:'ejecutado'|div:sum_asignado|mul:100|floatformat:2|intcomma}}%
-                            {% endif %}
-                        </td>
-                    {% endwith %}
+                    <td>TOTAL</td>
+                    {% if periodo_list|keyvalue:year == 'I' %}
+                        <td class="text-right">{{ rubrosg|total_sum:'inicial_asignado'|million|intcomma }}</td>
+		    {% else %}
+                        <td class="text-right">{{ rubrosg|total_sum:'ejecutado'|million|intcomma }}</td>
+		    {% endif %}
                 </tr>
             </table>
         </div>
@@ -132,11 +213,11 @@
         <div class="row">
             <div class="col-md-12">
             {% if not municipio %}
-            <h2><strong>Ranking </strong> <br>
-                por categoría de Municipios</h2>
+	    <h2><strong>{{ rankin_name}}</strong> <br />
+            </h2>
             {% else %}
-            <h2><strong>Ranking </strong> <br>
-                por habitante categoría municipal
+	    <h2><strong>{{ rankin_name}}, presupuesto {{ year }}</strong> <br>
+		    Municipio de {{ municipio }} grupo
                 "{{ mi_clase.clasificacion }}"</h2>
             {% endif %}
             <hr class="pma-line-3" />
@@ -230,9 +311,10 @@
     <div id="detail-1" class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 table-responsive">
-                <h2>{{indicator_name}}</h2>
+		<h2>{{indicator_name}}<br />
                 {% if municipio %}
-                <h3>por Municipios de Categoría "{{ mi_clase.clasificacion }}"</h3>
+                por Municipios de Categoría "{{ mi_clase.clasificacion }}"
+		</h2>
                 <table class="table table-condensed table-striped pma-bg-white">
                     <thead class="thead-inverse">
                     <tr class="bg-primary">
@@ -330,10 +412,12 @@
 {% block section3 %}
 <div class="container wide">
     <div class="row">
-        <div class="col-md-12 text-center">
-            <h2>Información Histórica<br>
-            <strong>Ejecución presupuestaria del gasto de funcionamiento {% if not municipio %}Consolidado municipal {% endif %}</strong> </h2>
-            <hr class="pma-line-4" />
+        <div class="col-md-12">
+	    <h2><strong>Información Histórica </strong><br>
+            {{indicator_name}} 
+	    </h2>
+	    <h3>{% if not municipio %}Consolidado 153 municipios{% else %} {{municipio}}{% endif %} </h3>
+	    <hr class="pma-line-3" />
         </div>
     </div>
 </div>
@@ -443,80 +527,28 @@
 
 
 {% block section4 %}
+{% if periodo_list|keyvalue:year != 'I' %}
 <div class="container wide">
     <div class="row">
         <div class="col-md-12">
-            <h2><strong>Modificaciones al presupuesto municipal</strong><br>
-            Millones de córdobas corrientes </h2>
+            <h2>
+                    Ingresos corrientes propios y gastos corientes totales 
+		    {% if municipio %} {{ municipio }} {% endif %}{{ year }}
+		    {% if not municipio %}consolidado 153 municipios{% endif %}<br />
+		    Presupuesto inicial, intermedio, de cierre y su modificación por rubro
+	    </h2>
+            <h4>Millones de córdobas corrientes</h4>
             <hr class="pma-line-3" />
         </div>
     </div>
     <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-6 table-responsive">
-          <div class="text-center">
-            <h3><strong>Ingresos corrientes propios</strong></h3>
-            <hr class="pma-line-4" />
-          </div>
-          <table class="table table-condensed">
-            <tr class="bg-primary"> <th>Rubros de ingresos</th> <th>Inicial</th>
-                <th>Actualizado</th> <th>Ejecutado</th>
-            </tr>
-            {% for row in rubros %}
-                <tr>
-                    <td>{% firstof row.tipoingreso__nombre row.tipoingreso__clasificacion %}</td>
-                    <td class="text-right">{{ row.inicial_asignado|million|intcomma }}</td>
-
-                    <td class="text-right">{{ row.actualizado_asignado|million|intcomma }}</td>
-                    <td class="text-right">{% if row.final_ejecutado %}{{ row.final_ejecutado|million|intcomma }}{% else %}0{% endif %}</td>
-                </tr>
-            {% endfor %}
-            <tr class="bold">
-                <td>TOTAL</td>
-                <td class="text-right">{{ rubros|total_sum:'inicial_asignado'|million|intcomma }}</td>
-                <td class="text-right">{{ rubros|total_sum:'actualizado_asignado'|million|intcomma }}</td>
-                <td class="text-right">{{ rubros|total_sum:'final_ejecutado'|million|intcomma }}</td>
-            </tr>
-          </table>
-        </div>
-        <div class="col-xs-12 col-sm-12 col-md-6 table-responsive">
-          <div class="text-center">
-            <h3><strong>Gastos corrientes totales</strong></h3>
-            <hr class="pma-line-4" />
-          </div>
-          <table class="table table-condensed">
-            <tr class="bg-primary"> <th>Rubros de ingresos</th> <th>Inicial</th>
-                <th>Actualizado</th><th>Ejecutado</th>
-            </tr>
-            {% for row in rubrosg %}
-                <tr>
-                    <td>{% firstof row.tipogasto__nombre row.tipogasto__clasificacion %}</td>
-                    <td class="text-right">{{ row.inicial_asignado|million|intcomma }}</td>
-
-                    <td class="text-right">{{ row.actualizado_asignado|million|intcomma }}</td>
-                    <td class="text-right">{% if row.final_ejecutado %}{{ row.final_ejecutado|million|intcomma }}{% else %}0{% endif %}</td>
-                </tr>
-            {% endfor %}
-            <tr class="bold">
-                <td>TOTAL</td>
-                <td class="text-right">{{ rubros|total_sum:'inicial_asignado'|million|intcomma }}</td>
-                <td class="text-right">{{ rubros|total_sum:'actualizado_asignado'|million|intcomma }}</td>
-                <td class="text-right">{{ rubros|total_sum:'final_ejecutado'|million|intcomma }}</td>
-            </tr>
-          </table>
-        </div>
-
-        <div class="container">
-            <div class="col-md-12 text-center medium">
-                <button id="show-detail-2" class="blanco btn pma-bg-blue more" type="submit">
-                Ver detalles </button>
-            </div>
-        </div>
-
-        <div id="detail-2" class="row">
         <div class="col-xs-12 col-sm-12 col-md-12 table-responsive">
-        <h3><strong>Detalle de modificaciones en</strong> ingresos corrientes propios</h3>
-        <table class="table table-bordered">
-            <tr class="bg-primary">
+          <h3>Ingresos corrientes propios
+                {% if municipio %} {{ municipio }} {% endif %}{{ year }}
+		{% if not municipio %}consolidado 153 municipios{% endif %}
+	  </h3>
+          <table class="table table-bordered">
+            <tr>
                 <td></td>
                 <td></td>
                 <td colspan="4" class="text-center">
@@ -598,12 +630,15 @@
                     </td>
                 {% endwith %}
             </tr>
-        </table>
+          </table>
         </div>
         <div class="col-md-12">
-        <h3><strong>Detalle de modificaciones en</strong> gastos corrientes totales</h3>
+	<h3>Gastos corrientes totales
+              {% if municipio %} {{ municipio }} {% endif %}{{ year }}
+              {% if not municipio %}consolidado 153 municipios{% endif %}
+	 </h3>
         <table class="table table-bordered">
-            <tr class="bg-primary">
+            <tr>
                 <td></td>
                 <td></td>
                 <td colspan="4" class="text-center">
@@ -690,9 +725,9 @@
             </tr>
         </table>
         </div>
-        </div>
     </div>
 </div>
+{% endif %}
 {% endblock %}
 
 {% block extra_footer_scripts %}
